--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
-    "dev":"nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "ejs": "^2.6.1",
     "express": "^4.17.0",
+    "express-session": "^1.16.1",
     "mongoose": "^5.5.10",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
