--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.10",
     "passport": "^0.4.0",
     "passport-google-oauth2": "^0.2.0"
